Open Writer Add a chart Change the Transparency in the property pane to Square Click "Specify the variation of gradient transparency" Every time https://www.screencast.com/t/2EKFiMOz https://www.screencast.com/t/xnsS833sYhRz Version: 5.4.1.2 (x64) Build ID: ea7cb86e6eeb2bf3a5af73a8f7777ac570321527 CPU threads: 8; OS: Windows 6.19; UI render: default; Locale: ja-JP (ja_JP); Calc: group
Nice catch!! Reproduced in Version: 6.0.0.0.alpha0+ Build ID: 8d2a287da3abb0576512406227d0a3acd602123e CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; Locale: ca-ES (ca_ES.UTF-8); Calc: group
Also reproduced in Version: 5.2.0.0.alpha1+ Build ID: 5b168b3fa568e48e795234dc5fa454bf24c9805e CPU Threads: 4; OS Version: Linux 4.10; UI Render: default; Locale: ca-ES (ca_ES.UTF-8)
Created attachment 136591 [details] gdb backtrace
Let's give a try with https://gerrit.libreoffice.org/#/c/42925/
Julien Nabet committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=1fba529cf2d810bfce1f3fbcad84b6f6805e1405 tdf#112727: crash in chart (transparency related) It will be available in 6.0.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Fixed in Version: 6.0.0.0.alpha0+ Build ID: 1d0fbc9927f357d25859b7cca7ea5e9a9637681e CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; Locale: ca-ES (ca_ES.UTF-8); Calc: group @Julien, could you please close this as VERIFIED FIXED?
As asked by Xisco.
For the record, I cherry-picked the patch for 5.4, it's waiting for review, see https://gerrit.libreoffice.org/#/c/42950/
Julien Nabet committed a patch related to this issue. It has been pushed to "libreoffice-5-4": http://cgit.freedesktop.org/libreoffice/core/commit/?id=584d87162aceaabd0a80674f07c65eda7318db8a&h=libreoffice-5-4 tdf#112727: crash in chart (transparency related) It will be available in 5.4.3. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.