tdf#112727: crash in chart (transparency related)

There's nothing to rearrange if mpFloatTransparenceItem isn't set
0  0x00007fffefb26748 in NameOrIndex::IsIndex() const (this=0x0) at /home/julien/lo/libreoffice/include/svx/xit.hxx:56
1  0x00007fffefb23140 in XFillGradientItem::GetGradientValue() const (this=0x0) at /home/julien/lo/libreoffice/svx/source/xoutdev/xattr.cxx:2009
2  0x00007ffff0b2c95a in svx::sidebar::AreaTransparencyGradientPopup::InitStatus(XFillFloatTransparenceItem const*) (this=0x55555859a520, pGradientItem=0x0)
    at /home/julien/lo/libreoffice/svx/source/sidebar/area/AreaTransparencyGradientPopup.cxx:61
3  0x00007ffff0b2cd33 in svx::sidebar::AreaTransparencyGradientPopup::Rearrange(XFillFloatTransparenceItem const*) (this=0x55555859a520, pGradientItem=0x0)
    at /home/julien/lo/libreoffice/svx/source/sidebar/area/AreaTransparencyGradientPopup.cxx:90
4  0x00007ffff0b262ae in svx::sidebar::AreaPropertyPanelBase::ClickTrGrHdl_Impl(ToolBox*) (this=0x555558485a50, pToolBox=0x5555586ed8c0)
    at /home/julien/lo/libreoffice/svx/source/sidebar/area/AreaPropertyPanelBase.cxx:1272
5  0x00007ffff0b26207 in svx::sidebar::AreaPropertyPanelBase::LinkStubClickTrGrHdl_Impl(void*, ToolBox*) (instance=0x555558485a50, data=0x5555586ed8c0)
    at /home/julien/lo/libreoffice/svx/source/sidebar/area/AreaPropertyPanelBase.cxx:1268

Change-Id: I1d2db6b91c888ca3598e0ea04dd0fa0e9fc790a7
Reviewed-on: https://gerrit.libreoffice.org/42925
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Tested-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit 1fba529cf2d810bfce1f3fbcad84b6f6805e1405)
Reviewed-on: https://gerrit.libreoffice.org/42950
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>